# phishgen

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
phishgen/: logger.py  main.py
phishgen/arguments/: create.py  inject.py  macro.py  parser.py
phishgen/macros/: data_scrub.py  macro_modifier.py
phishgen/patcher/: docx_patch.py
resources/examples/: full_resume_pattern.dotx  harmless_pattern.dotx  macro.dotm  resume_document.docx
resources/templates/: dotm_setting.j2  macro_source.j2
src/: config.py  configuration.rs  lib.rs  logger.py  main.py  main.rs
src/arguments/: create.py  inject.py  macro.py  parser.py
src/macros/: data_scrub.py  macro_modifier.py
src/patcher/: docx_patch.py
