[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "phishgen"
version = "1.0.0"
description = "CLI-tool for manipulating macros"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "TonySD", email = "none@none.none" }
]

license = { text = "MIT" }

dependencies = [
    "pywin32; platform_system == 'Windows'",  # Только для Windows
    "Jinja2",
    "colorama"
]

[project.urls]
"Homepage" = "https://github.com/SelfScriptKiddies/phishgen"

[project.scripts]
phishgen = "phishgen.main:main"

[tool.setuptools]
py-modules = ["phishgen"]

[tool.setuptools.packages.find]
where=["."]
include = ["phishgen/*"]
